if HAVE_GME

gmeversion=game-music-emu-0.6pre
gmepath=@top_srcdir@/plugins/gme/$(gmeversion)

EXTRA_DIST = $(gmepath)/changes.txt $(gmepath)/design.txt $(gmepath)/gme.txt $(gmepath)/license.txt $(gmepath)/readme.txt 

gmedir = $(libdir)/$(PACKAGE)

pkglib_LTLIBRARIES = gme.la

# 0.6pre (foo_gep) files
gme_la_SOURCES = cgme.c\
	$(gmeversion)/gme/Ay_Apu.cpp\
	$(gmeversion)/gme/Ay_Core.cpp\
	$(gmeversion)/gme/Ay_Cpu.cpp\
	$(gmeversion)/gme/Ay_Emu.cpp\
	$(gmeversion)/gme/blargg_common.cpp\
	$(gmeversion)/gme/blargg_errors.cpp\
	$(gmeversion)/gme/Blip_Buffer.cpp\
	$(gmeversion)/gme/Bml_Parser.cpp\
	$(gmeversion)/gme/C140_Emu.cpp\
	$(gmeversion)/gme/c140.c\
	$(gmeversion)/gme/Classic_Emu.cpp\
	$(gmeversion)/gme/dac_control.c\
	$(gmeversion)/gme/dbopl.cpp\
	$(gmeversion)/gme/Downsampler.cpp\
	$(gmeversion)/gme/Dual_Resampler.cpp\
	$(gmeversion)/gme/Effects_Buffer.cpp\
	$(gmeversion)/gme/emu2413.cpp\
	$(gmeversion)/gme/Fir_Resampler.cpp\
	$(gmeversion)/gme/fm.c\
	$(gmeversion)/gme/fm2612.c\
	$(gmeversion)/gme/fmopl.cpp\
	$(gmeversion)/gme/Gb_Apu.cpp\
	$(gmeversion)/gme/Gb_Cpu.cpp\
	$(gmeversion)/gme/Gb_Oscs.cpp\
	$(gmeversion)/gme/Gbs_Core.cpp\
	$(gmeversion)/gme/Gbs_Cpu.cpp\
	$(gmeversion)/gme/Gbs_Emu.cpp\
	$(gmeversion)/gme/gme.cpp\
	$(gmeversion)/gme/Gme_File.cpp\
	$(gmeversion)/gme/Gme_Loader.cpp\
	$(gmeversion)/gme/Gym_Emu.cpp\
	$(gmeversion)/gme/Hes_Apu_Adpcm.cpp\
	$(gmeversion)/gme/Hes_Apu.cpp\
	$(gmeversion)/gme/Hes_Core.cpp\
	$(gmeversion)/gme/Hes_Cpu.cpp\
	$(gmeversion)/gme/Hes_Emu.cpp\
	$(gmeversion)/gme/K051649_Emu.cpp\
	$(gmeversion)/gme/k051649.c\
	$(gmeversion)/gme/K053260_Emu.cpp\
	$(gmeversion)/gme/k053260.c\
	$(gmeversion)/gme/K054539_Emu.cpp\
	$(gmeversion)/gme/k054539.c\
	$(gmeversion)/gme/Kss_Core.cpp\
	$(gmeversion)/gme/Kss_Cpu.cpp\
	$(gmeversion)/gme/Kss_Emu.cpp\
	$(gmeversion)/gme/Kss_Scc_Apu.cpp\
	$(gmeversion)/gme/M3u_Playlist.cpp\
	$(gmeversion)/gme/Multi_Buffer.cpp\
	$(gmeversion)/gme/Music_Emu.cpp\
	$(gmeversion)/gme/Nes_Apu.cpp\
	$(gmeversion)/gme/Nes_Cpu.cpp\
	$(gmeversion)/gme/Nes_Fds_Apu.cpp\
	$(gmeversion)/gme/Nes_Fme7_Apu.cpp\
	$(gmeversion)/gme/Nes_Namco_Apu.cpp\
	$(gmeversion)/gme/Nes_Oscs.cpp\
	$(gmeversion)/gme/Nes_Vrc6_Apu.cpp\
	$(gmeversion)/gme/Nes_Vrc7_Apu.cpp\
	$(gmeversion)/gme/Nsf_Core.cpp\
	$(gmeversion)/gme/Nsf_Cpu.cpp\
	$(gmeversion)/gme/Nsfe_Emu.cpp\
	$(gmeversion)/gme/Nsf_Emu.cpp\
	$(gmeversion)/gme/Nsf_Impl.cpp\
	$(gmeversion)/gme/Okim6258_Emu.cpp\
	$(gmeversion)/gme/okim6258.c\
	$(gmeversion)/gme/Okim6295_Emu.cpp\
	$(gmeversion)/gme/okim6295.c\
	$(gmeversion)/gme/Opl_Apu.cpp\
	$(gmeversion)/gme/Pwm_Emu.cpp\
	$(gmeversion)/gme/pwm.c\
	$(gmeversion)/gme/qmix.c\
	$(gmeversion)/gme/Qsound_Apu.cpp\
	$(gmeversion)/gme/Resampler.cpp\
	$(gmeversion)/gme/Rf5C68_Emu.cpp\
	$(gmeversion)/gme/rf5c68.c\
	$(gmeversion)/gme/Rf5C164_Emu.cpp\
	$(gmeversion)/gme/Rom_Data.cpp\
	$(gmeversion)/gme/Sap_Apu.cpp\
	$(gmeversion)/gme/Sap_Core.cpp\
	$(gmeversion)/gme/Sap_Cpu.cpp\
	$(gmeversion)/gme/Sap_Emu.cpp\
	$(gmeversion)/gme/scd_pcm.c\
	$(gmeversion)/gme/SegaPcm_Emu.cpp\
	$(gmeversion)/gme/segapcm.c\
	$(gmeversion)/gme/Sgc_Core.cpp\
	$(gmeversion)/gme/Sgc_Cpu.cpp\
	$(gmeversion)/gme/Sgc_Emu.cpp\
	$(gmeversion)/gme/Sgc_Impl.cpp\
	$(gmeversion)/gme/Sms_Apu.cpp\
	$(gmeversion)/gme/Sms_Fm_Apu.cpp\
	$(gmeversion)/gme/Snes_Spc.cpp\
	$(gmeversion)/gme/Spc_Cpu.cpp\
	$(gmeversion)/gme/Spc_Dsp.cpp\
	$(gmeversion)/gme/Spc_Emu.cpp\
	$(gmeversion)/gme/SPC_Filter.cpp\
	$(gmeversion)/gme/Spc_Sfm.cpp\
	$(gmeversion)/gme/Track_Filter.cpp\
	$(gmeversion)/gme/Upsampler.cpp\
	$(gmeversion)/gme/Vgm_Core.cpp\
	$(gmeversion)/gme/Vgm_Emu.cpp\
	$(gmeversion)/gme/Ym2151_Emu.cpp\
	$(gmeversion)/gme/ym2151.c\
	$(gmeversion)/gme/Ym2203_Emu.cpp\
	$(gmeversion)/gme/Ym2413_Emu.cpp\
	$(gmeversion)/gme/Ym2608_Emu.cpp\
	$(gmeversion)/gme/Ym2610b_Emu.cpp\
	$(gmeversion)/gme/Ym2612_Emu.cpp\
	$(gmeversion)/gme/Ym3812_Emu.cpp\
	$(gmeversion)/gme/Ymf262_Emu.cpp\
	$(gmeversion)/gme/Ymz280b_Emu.cpp\
	$(gmeversion)/gme/ymz280b.c\
	$(gmeversion)/gme/ymdeltat.cpp\
	$(gmeversion)/gme/Z80_Cpu.cpp\
	$(gmeversion)/gme/Data_Reader.cpp\
	$(gmeversion)/gme/s_deltat.c\
	$(gmeversion)/gme/s_logtbl.c\
	$(gmeversion)/gme/s_opl.c\
	$(gmeversion)/gme/s_opltbl.c\
	$(gmeversion)/gme/ym2413.c\
	$(gmeversion)/gme/higan/dsp/dsp.cpp\
	$(gmeversion)/gme/higan/dsp/SPC_DSP.cpp\
	$(gmeversion)/gme/higan/processor/spc700/algorithms.cpp\
	$(gmeversion)/gme/higan/processor/spc700/instructions.cpp\
	$(gmeversion)/gme/higan/processor/spc700/spc700.cpp\
	$(gmeversion)/gme/higan/smp/smp.cpp\
	$(gmeversion)/gme/adlib.h\
	$(gmeversion)/gme/Ay_Apu.h\
	$(gmeversion)/gme/Ay_Core.h\
	$(gmeversion)/gme/Ay_Emu.h\
	$(gmeversion)/gme/blargg_common.h\
	$(gmeversion)/gme/blargg_config.h\
	$(gmeversion)/gme/blargg_endian.h\
	$(gmeversion)/gme/blargg_errors.h\
	$(gmeversion)/gme/blargg_source.h\
	$(gmeversion)/gme/Blip_Buffer.h\
	$(gmeversion)/gme/Blip_Buffer_impl2.h\
	$(gmeversion)/gme/Blip_Buffer_impl.h\
	$(gmeversion)/gme/Bml_Parser.h\
	$(gmeversion)/gme/C140_Emu.h\
	$(gmeversion)/gme/c140.h\
	$(gmeversion)/gme/Chip_Resampler.h\
	$(gmeversion)/gme/Classic_Emu.h\
	$(gmeversion)/gme/dac_control.h\
	$(gmeversion)/gme/dbopl.h\
	$(gmeversion)/gme/divfix.h\
	$(gmeversion)/gme/Data_Reader.h\
	$(gmeversion)/gme/Downsampler.h\
	$(gmeversion)/gme/Dual_Resampler.h\
	$(gmeversion)/gme/Effects_Buffer.h\
	$(gmeversion)/gme/emu2413.h\
	$(gmeversion)/gme/emuconfig.h\
	$(gmeversion)/gme/Fir_Resampler.h\
	$(gmeversion)/gme/fm.h\
	$(gmeversion)/gme/fmopl.h\
	$(gmeversion)/gme/Gb_Apu.h\
	$(gmeversion)/gme/Gb_Cpu.h\
	$(gmeversion)/gme/Gb_Cpu_run.h\
	$(gmeversion)/gme/Gb_Oscs.h\
	$(gmeversion)/gme/Gbs_Core.h\
	$(gmeversion)/gme/Gbs_Emu.h\
	$(gmeversion)/gme/Gme_File.h\
	$(gmeversion)/gme/gme.h\
	$(gmeversion)/gme/Gme_Loader.h\
	$(gmeversion)/gme/Gym_Emu.h\
	$(gmeversion)/gme/Hes_Apu_Adpcm.h\
	$(gmeversion)/gme/Hes_Apu.h\
	$(gmeversion)/gme/Hes_Core.h\
	$(gmeversion)/gme/Hes_Cpu.h\
	$(gmeversion)/gme/Hes_Cpu_run.h\
	$(gmeversion)/gme/Hes_Emu.h\
	$(gmeversion)/gme/i_fmpac.h\
	$(gmeversion)/gme/i_fmunit.h\
	$(gmeversion)/gme/i_vrc7.h\
	$(gmeversion)/gme/K051649_Emu.h\
	$(gmeversion)/gme/k051649.h\
	$(gmeversion)/gme/K053260_Emu.h\
	$(gmeversion)/gme/k053260.h\
	$(gmeversion)/gme/K054539_Emu.h\
	$(gmeversion)/gme/k054539.h\
	$(gmeversion)/gme/kmsnddev.h\
	$(gmeversion)/gme/Kss_Core.h\
	$(gmeversion)/gme/Kss_Emu.h\
	$(gmeversion)/gme/Kss_Scc_Apu.h\
	$(gmeversion)/gme/M3u_Playlist.h\
	$(gmeversion)/gme/mamedef.h\
	$(gmeversion)/gme/mathdefs.h\
	$(gmeversion)/gme/Multi_Buffer.h\
	$(gmeversion)/gme/Music_Emu.h\
	$(gmeversion)/gme/Nes_Apu.h\
	$(gmeversion)/gme/Nes_Cpu.h\
	$(gmeversion)/gme/Nes_Cpu_run.h\
	$(gmeversion)/gme/Nes_Fds_Apu.h\
	$(gmeversion)/gme/Nes_Fme7_Apu.h\
	$(gmeversion)/gme/Nes_Mmc5_Apu.h\
	$(gmeversion)/gme/Nes_Namco_Apu.h\
	$(gmeversion)/gme/Nes_Oscs.h\
	$(gmeversion)/gme/nestypes.h\
	$(gmeversion)/gme/Nes_Vrc6_Apu.h\
	$(gmeversion)/gme/Nes_Vrc7_Apu.h\
	$(gmeversion)/gme/Nsf_Core.h\
	$(gmeversion)/gme/Nsfe_Emu.h\
	$(gmeversion)/gme/Nsf_Emu.h\
	$(gmeversion)/gme/Nsf_Impl.h\
	$(gmeversion)/gme/Okim6258_Emu.h\
	$(gmeversion)/gme/okim6258.h\
	$(gmeversion)/gme/Okim6295_Emu.h\
	$(gmeversion)/gme/okim6295.h\
	$(gmeversion)/gme/Opl_Apu.h\
	$(gmeversion)/gme/Pwm_Emu.h\
	$(gmeversion)/gme/pwm.h\
	$(gmeversion)/gme/qmix.h\
	$(gmeversion)/gme/Qsound_Apu.h\
	$(gmeversion)/gme/Resampler.h\
	$(gmeversion)/gme/Rf5C68_Emu.h\
	$(gmeversion)/gme/rf5c68.h\
	$(gmeversion)/gme/Rf5C164_Emu.h\
	$(gmeversion)/gme/Rom_Data.h\
	$(gmeversion)/gme/Sap_Apu.h\
	$(gmeversion)/gme/Sap_Core.h\
	$(gmeversion)/gme/Sap_Emu.h\
	$(gmeversion)/gme/scd_pcm.h\
	$(gmeversion)/gme/s_deltat.h\
	$(gmeversion)/gme/SegaPcm_Emu.h\
	$(gmeversion)/gme/segapcm.h\
	$(gmeversion)/gme/Sgc_Core.h\
	$(gmeversion)/gme/Sgc_Emu.h\
	$(gmeversion)/gme/Sgc_Impl.h\
	$(gmeversion)/gme/s_logtbl.h\
	$(gmeversion)/gme/Sms_Apu.h\
	$(gmeversion)/gme/Sms_Fm_Apu.h\
	$(gmeversion)/gme/Snes_Spc.h\
	$(gmeversion)/gme/s_opl.h\
	$(gmeversion)/gme/s_opltbl.h\
	$(gmeversion)/gme/Spc_Cpu.h\
	$(gmeversion)/gme/Spc_Dsp.h\
	$(gmeversion)/gme/Spc_Emu.h\
	$(gmeversion)/gme/Spc_Filter.h\
	$(gmeversion)/gme/Spc_Sfm.h\
	$(gmeversion)/gme/Track_Filter.h\
	$(gmeversion)/gme/Upsampler.h\
	$(gmeversion)/gme/Vgm_Core.h\
	$(gmeversion)/gme/Vgm_Emu.h\
	$(gmeversion)/gme/Ym2151_Emu.h\
	$(gmeversion)/gme/ym2151.h\
	$(gmeversion)/gme/Ym2203_Emu.h\
	$(gmeversion)/gme/Ym2413_Emu.h\
	$(gmeversion)/gme/ym2413.h\
	$(gmeversion)/gme/Ym2608_Emu.h\
	$(gmeversion)/gme/Ym2610b_Emu.h\
	$(gmeversion)/gme/Ym2612_Emu.h\
	$(gmeversion)/gme/Ym3812_Emu.h\
	$(gmeversion)/gme/ymdeltat.h\
	$(gmeversion)/gme/Ymf262_Emu.h\
	$(gmeversion)/gme/Ymz280b_Emu.h\
	$(gmeversion)/gme/ymz280b.h\
	$(gmeversion)/gme/Z80_Cpu.h\
	$(gmeversion)/gme/Z80_Cpu_run.h\
	$(gmeversion)/gme/higan/dsp/dsp.hpp\
	$(gmeversion)/gme/higan/dsp/SPC_DSP.h\
	$(gmeversion)/gme/higan/processor/spc700/memory.hpp\
	$(gmeversion)/gme/higan/processor/spc700/registers.hpp\
	$(gmeversion)/gme/higan/processor/spc700/spc700.hpp\
	$(gmeversion)/gme/higan/smp/smp.hpp

gme_la_LDFLAGS = -module -avoid-version $(NOCPPLIB)
gme_la_LIBADD = $(ZLIB_LIBS)

AM_CFLAGS = $(CFLAGS) $(ZLIB_CFLAGS) -I$(gmepath) -std=c99 -DGME_VERSION_055
AM_CPPFLAGS = $(CXXFLAGS) -fno-exceptions -fno-rtti -fno-unwind-tables
endif
