gmeversion=game-music-emu-0.6pre
gmepath=@top_srcdir@/plugins/gme/game-music-emu-0.6pre

EXTRA_DIST = $(gmepath)/changes.txt $(gmepath)/design.txt $(gmepath)/gme.txt $(gmepath)/license.txt $(gmepath)/readme.txt $(gmepath)/vgmplay/VGMPlay/chips/emu2413_NESpatches.txt $(gmepath)/vgmplay/VGMPlay/licenses/GPL.txt $(gmepath)/vgmplay/VGMPlay/licenses/List.txt $(gmepath)/vgmplay/VGMPlay/licenses/mame_license.txt $(gmepath)/vgmplay/VGMPlay/SourceReadme.txt $(gmepath)/vgmplay/VGMPlay/VGMPlay.txt $(gmepath)/vgmplay/VGMPlay/VGMPlay_Updates.txt $(gmepath)/vgmplay/VGMPlay/vgmspec171.txt $(gmepath)/gme/higan/smp/memory.cpp $(gmepath)/gme/higan/smp/timing.cpp $(gmepath)/vgmplay/VGMPlay/chips/opl.c $(gmepath)/vgmplay/VGMPlay/chips/emuconfig.h

if HAVE_GME
pkglib_LTLIBRARIES = gme.la

# 0.6pre (foo_gep) files
gme_la_SOURCES = cgme.c gmewrap.cpp gmewrap.h\
	game-music-emu-0.6pre/gme/Ay_Apu.cpp\
	game-music-emu-0.6pre/gme/Ay_Core.cpp\
	game-music-emu-0.6pre/gme/Ay_Cpu.cpp\
	game-music-emu-0.6pre/gme/Ay_Emu.cpp\
	game-music-emu-0.6pre/gme/Blip_Buffer.cpp\
	game-music-emu-0.6pre/gme/Bml_Parser.cpp\
	game-music-emu-0.6pre/gme/Classic_Emu.cpp\
	game-music-emu-0.6pre/gme/Data_Reader.cpp\
	game-music-emu-0.6pre/gme/Downsampler.cpp\
	game-music-emu-0.6pre/gme/Dual_Resampler.cpp\
	game-music-emu-0.6pre/gme/Effects_Buffer.cpp\
	game-music-emu-0.6pre/gme/Fir_Resampler.cpp\
	game-music-emu-0.6pre/gme/Gb_Apu.cpp\
	game-music-emu-0.6pre/gme/Gb_Cpu.cpp\
	game-music-emu-0.6pre/gme/Gb_Oscs.cpp\
	game-music-emu-0.6pre/gme/Gbs_Core.cpp\
	game-music-emu-0.6pre/gme/Gbs_Cpu.cpp\
	game-music-emu-0.6pre/gme/Gbs_Emu.cpp\
	game-music-emu-0.6pre/gme/Gme_File.cpp\
	game-music-emu-0.6pre/gme/Gme_Loader.cpp\
	game-music-emu-0.6pre/gme/Gym_Emu.cpp\
	game-music-emu-0.6pre/gme/Hes_Apu.cpp\
	game-music-emu-0.6pre/gme/Hes_Apu_Adpcm.cpp\
	game-music-emu-0.6pre/gme/Hes_Core.cpp\
	game-music-emu-0.6pre/gme/Hes_Cpu.cpp\
	game-music-emu-0.6pre/gme/Hes_Emu.cpp\
	game-music-emu-0.6pre/gme/Kss_Core.cpp\
	game-music-emu-0.6pre/gme/Kss_Cpu.cpp\
	game-music-emu-0.6pre/gme/Kss_Emu.cpp\
	game-music-emu-0.6pre/gme/Kss_Scc_Apu.cpp\
	game-music-emu-0.6pre/gme/M3u_Playlist.cpp\
	game-music-emu-0.6pre/gme/Multi_Buffer.cpp\
	game-music-emu-0.6pre/gme/Music_Emu.cpp\
	game-music-emu-0.6pre/gme/Nes_Apu.cpp\
	game-music-emu-0.6pre/gme/Nes_Cpu.cpp\
	game-music-emu-0.6pre/gme/Nes_Fds_Apu.cpp\
	game-music-emu-0.6pre/gme/Nes_Fme7_Apu.cpp\
	game-music-emu-0.6pre/gme/Nes_Namco_Apu.cpp\
	game-music-emu-0.6pre/gme/Nes_Oscs.cpp\
	game-music-emu-0.6pre/gme/Nes_Vrc6_Apu.cpp\
	game-music-emu-0.6pre/gme/Nes_Vrc7_Apu.cpp\
	game-music-emu-0.6pre/gme/Nsf_Core.cpp\
	game-music-emu-0.6pre/gme/Nsf_Cpu.cpp\
	game-music-emu-0.6pre/gme/Nsf_Emu.cpp\
	game-music-emu-0.6pre/gme/Nsf_Impl.cpp\
	game-music-emu-0.6pre/gme/Nsfe_Emu.cpp\
	game-music-emu-0.6pre/gme/Opl_Apu.cpp\
	game-music-emu-0.6pre/gme/Resampler.cpp\
	game-music-emu-0.6pre/gme/Rom_Data.cpp\
	game-music-emu-0.6pre/gme/SPC_Filter.cpp\
	game-music-emu-0.6pre/gme/Sap_Apu.cpp\
	game-music-emu-0.6pre/gme/Sap_Core.cpp\
	game-music-emu-0.6pre/gme/Sap_Cpu.cpp\
	game-music-emu-0.6pre/gme/Sap_Emu.cpp\
	game-music-emu-0.6pre/gme/Sgc_Core.cpp\
	game-music-emu-0.6pre/gme/Sgc_Cpu.cpp\
	game-music-emu-0.6pre/gme/Sgc_Emu.cpp\
	game-music-emu-0.6pre/gme/Sgc_Impl.cpp\
	game-music-emu-0.6pre/gme/Sms_Apu.cpp\
	game-music-emu-0.6pre/gme/Sms_Fm_Apu.cpp\
	game-music-emu-0.6pre/gme/Spc_Emu.cpp\
	game-music-emu-0.6pre/gme/Spc_Sfm.cpp\
	game-music-emu-0.6pre/gme/Track_Filter.cpp\
	game-music-emu-0.6pre/gme/Upsampler.cpp\
	game-music-emu-0.6pre/gme/Vgm_Core.cpp\
	game-music-emu-0.6pre/gme/Vgm_Emu.cpp\
	game-music-emu-0.6pre/gme/Ym2413_Emu.cpp\
	game-music-emu-0.6pre/gme/Ym2612_Emu.cpp\
	game-music-emu-0.6pre/gme/Ym2612_Emu_Gens.cpp\
	game-music-emu-0.6pre/gme/Ym2612_Emu_MAME.cpp\
	game-music-emu-0.6pre/gme/Z80_Cpu.cpp\
	game-music-emu-0.6pre/gme/blargg_common.cpp\
	game-music-emu-0.6pre/gme/blargg_errors.cpp\
	game-music-emu-0.6pre/gme/gme.cpp\
	game-music-emu-0.6pre/gme/higan/dsp/dsp.cpp\
	game-music-emu-0.6pre/gme/higan/dsp/SPC_DSP.cpp\
	game-music-emu-0.6pre/gme/higan/processor/spc700/algorithms.cpp\
	game-music-emu-0.6pre/gme/higan/processor/spc700/instructions.cpp\
	game-music-emu-0.6pre/gme/higan/processor/spc700/spc700.cpp\
	game-music-emu-0.6pre/gme/higan/smp/smp.cpp\
	game-music-emu-0.6pre/vgmplay/VGMPlay/ChipMapper.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2151intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2203intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2413intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2608intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2610intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2612intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/262intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/3526intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/3812intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/8950intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/adlibemu_opl2.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/adlibemu_opl3.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ay8910.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ay_intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c140.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c352.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c6280.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c6280intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/dac_control.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/emu2149.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/emu2413.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/es5503.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/es5506.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/fm.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/fm2612.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/fmopl.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/gb.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/iremga20.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k051649.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k053260.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k054539.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/multipcm.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/nes_apu.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/nes_intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_apu.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_dmc.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_fds.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/okim6258.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/okim6295.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/Ootake_PSG.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/panning.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/pokey.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/pwm.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/qsound.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/rf5c68.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/saa1099.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/scd_pcm.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/scsp.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/segapcm.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn76489.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn76496.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn764intf.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/upd7759.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/vsu.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ws_audio.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/x1_010.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2151.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2413.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2612.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymdeltat.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf262.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf271.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf278b.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymz280b.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/yam.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/resampler.c\
	game-music-emu-0.6pre/vgmplay/VGMPlay/VGMPlay.c\
	game-music-emu-0.6pre/gme/Ay_Apu.h\
	game-music-emu-0.6pre/gme/Ay_Core.h\
	game-music-emu-0.6pre/gme/Ay_Emu.h\
	game-music-emu-0.6pre/gme/Blip_Buffer.h\
	game-music-emu-0.6pre/gme/Blip_Buffer_impl.h\
	game-music-emu-0.6pre/gme/Blip_Buffer_impl2.h\
	game-music-emu-0.6pre/gme/Bml_Parser.h\
	game-music-emu-0.6pre/gme/Classic_Emu.h\
	game-music-emu-0.6pre/gme/Data_Reader.h\
	game-music-emu-0.6pre/gme/Downsampler.h\
	game-music-emu-0.6pre/gme/Dual_Resampler.h\
	game-music-emu-0.6pre/gme/Effects_Buffer.h\
	game-music-emu-0.6pre/gme/Fir_Resampler.h\
	game-music-emu-0.6pre/gme/Gb_Apu.h\
	game-music-emu-0.6pre/gme/Gb_Cpu.h\
	game-music-emu-0.6pre/gme/Gb_Cpu_run.h\
	game-music-emu-0.6pre/gme/Gb_Oscs.h\
	game-music-emu-0.6pre/gme/Gbs_Core.h\
	game-music-emu-0.6pre/gme/Gbs_Emu.h\
	game-music-emu-0.6pre/gme/Gme_File.h\
	game-music-emu-0.6pre/gme/Gme_Loader.h\
	game-music-emu-0.6pre/gme/Gym_Emu.h\
	game-music-emu-0.6pre/gme/Hes_Apu.h\
	game-music-emu-0.6pre/gme/Hes_Apu_Adpcm.h\
	game-music-emu-0.6pre/gme/Hes_Core.h\
	game-music-emu-0.6pre/gme/Hes_Cpu.h\
	game-music-emu-0.6pre/gme/Hes_Cpu_run.h\
	game-music-emu-0.6pre/gme/Hes_Emu.h\
	game-music-emu-0.6pre/gme/Kss_Core.h\
	game-music-emu-0.6pre/gme/Kss_Emu.h\
	game-music-emu-0.6pre/gme/Kss_Scc_Apu.h\
	game-music-emu-0.6pre/gme/M3u_Playlist.h\
	game-music-emu-0.6pre/gme/Multi_Buffer.h\
	game-music-emu-0.6pre/gme/Music_Emu.h\
	game-music-emu-0.6pre/gme/Nes_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Cpu.h\
	game-music-emu-0.6pre/gme/Nes_Cpu_run.h\
	game-music-emu-0.6pre/gme/Nes_Fds_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Fme7_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Mmc5_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Namco_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Oscs.h\
	game-music-emu-0.6pre/gme/Nes_Vrc6_Apu.h\
	game-music-emu-0.6pre/gme/Nes_Vrc7_Apu.h\
	game-music-emu-0.6pre/gme/Nsf_Core.h\
	game-music-emu-0.6pre/gme/Nsf_Emu.h\
	game-music-emu-0.6pre/gme/Nsf_Impl.h\
	game-music-emu-0.6pre/gme/Nsfe_Emu.h\
	game-music-emu-0.6pre/gme/Opl_Apu.h\
	game-music-emu-0.6pre/gme/Resampler.h\
	game-music-emu-0.6pre/gme/Rom_Data.h\
	game-music-emu-0.6pre/gme/Sap_Apu.h\
	game-music-emu-0.6pre/gme/Sap_Core.h\
	game-music-emu-0.6pre/gme/Sap_Emu.h\
	game-music-emu-0.6pre/gme/Sgc_Core.h\
	game-music-emu-0.6pre/gme/Sgc_Emu.h\
	game-music-emu-0.6pre/gme/Sgc_Impl.h\
	game-music-emu-0.6pre/gme/Sms_Apu.h\
	game-music-emu-0.6pre/gme/Sms_Fm_Apu.h\
	game-music-emu-0.6pre/gme/Spc_Emu.h\
	game-music-emu-0.6pre/gme/Spc_Filter.h\
	game-music-emu-0.6pre/gme/Spc_Sfm.h\
	game-music-emu-0.6pre/gme/Track_Filter.h\
	game-music-emu-0.6pre/gme/Upsampler.h\
	game-music-emu-0.6pre/gme/Vgm_Core.h\
	game-music-emu-0.6pre/gme/Vgm_Emu.h\
	game-music-emu-0.6pre/gme/Ym2413_Emu.h\
	game-music-emu-0.6pre/gme/Ym2612_Emu.h\
	game-music-emu-0.6pre/gme/Z80_Cpu.h\
	game-music-emu-0.6pre/gme/Z80_Cpu_run.h\
	game-music-emu-0.6pre/gme/adlib.h\
	game-music-emu-0.6pre/gme/blargg_common.h\
	game-music-emu-0.6pre/gme/blargg_config.h\
	game-music-emu-0.6pre/gme/blargg_endian.h\
	game-music-emu-0.6pre/gme/blargg_errors.h\
	game-music-emu-0.6pre/gme/blargg_source.h\
	game-music-emu-0.6pre/gme/gme.h\
	game-music-emu-0.6pre/gme/gme_custom_dprintf.h\
	game-music-emu-0.6pre/gme/higan/dsp/dsp.hpp\
	game-music-emu-0.6pre/gme/higan/dsp/SPC_DSP.h\
	game-music-emu-0.6pre/gme/higan/processor/spc700/memory.hpp\
	game-music-emu-0.6pre/gme/higan/processor/spc700/registers.hpp\
	game-music-emu-0.6pre/gme/higan/processor/spc700/spc700.hpp\
	game-music-emu-0.6pre/gme/higan/smp/smp.hpp\
	game-music-emu-0.6pre/vgmplay/VGMPlay/ChipMapper.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2151intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2203intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2413intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2413tone.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2608intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2610intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/2612intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/262intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/281btone.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/3526intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/3812intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/8950intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/adlibemu.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ay8910.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ay_intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c140.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c352.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c6280.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/c6280intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ChipIncl.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/dac_control.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/emu2149.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/emu2413.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/emutypes.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/es5503.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/es5506.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/fm.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/fmopl.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/gb.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/iremga20.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k051649.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k053260.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/k054539.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/mamedef.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/multipcm.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/nes_apu.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/nes_defs.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/nes_intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_apu.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_dmc.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/np_nes_fds.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/okim6258.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/okim6295.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/Ootake_PSG.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/opl.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/panning.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/pokey.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/pwm.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/qsound.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/rf5c68.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/saa1099.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/scd_pcm.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/scsp.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/segapcm.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn76489.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn76496.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/sn764intf.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/upd7759.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/vrc7tone.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/vsu.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ws_audio.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ws_initialIo.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/x1_010.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2151.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2413.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ym2612.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymdeltat.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf262.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf271.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymf278b.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/ymz280b.h\
   	game-music-emu-0.6pre/vgmplay/VGMPlay/chips/yam.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/resampler.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/stdbool.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/VGMFile.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/VGMPlay.h\
	game-music-emu-0.6pre/vgmplay/VGMPlay/VGMPlay_Intf.h

gme_la_LDFLAGS = -module -avoid-version $(NOCPPLIB)
gme_la_LIBADD = $(ZLIB_LIBS)

gme_la_CFLAGS = $(CFLAGS) $(ZLIB_CFLAGS) -I$(gmepath) -std=c99 -DGME_VERSION_055 -I@top_srcdir@/include
gme_la_CXXFLAGS = $(CXXFLAGS) $(ZLIB_CFLAGS) -I$(gmepath) -I$(gmepath)/gme -DGME_VERSION_055 -fno-exceptions -fno-rtti -fno-unwind-tables -I@top_srcdir@/include
endif
